# cogents

./: .gitignore  AGENTS.md  Makefile  README.md  env.example  optimization_log.md  pyproject.toml
.cursor/: rules.md
.github/workflows/: ci.yml  release.yml
cogents/agents/askura_agent/: askura_agent.py  conversation.py  conversation_manager.py  extractor.py  information_extractor.py  models.py  prompts.py  question_generator.py  reflection.py  schemas.py  summarizer.py
cogents/agents/deep_researcher/: __init__.py  researcher.py
cogents/agents/seekra_agent/: __init__.py  configuration.py  researcher.py
cogents/base/: __init__.py  base.py  base_agent.py  base_websurfer.py
cogents/base/buspark/: __init__.py  base_watchdog.py
cogents/capabilities/semsearch/: README.md  document_processor.py  semantic_search.py
cogents/capabilities/websearch/: tavily_search_wrapper.py
cogents/common/: __init__.py  lg_hooks.py  logging.py
cogents/common/llm/: __init__.py  base.py  litellm.py  llamacpp.py  ollama.py  openai.py  openrouter.py
cogents/common/vectorstore/: pgvector.py  (+1 more)
cogents/ingreds/: __init__.py
cogents/toolify/: README.md  base.py
cogents/toolkits/: arxiv_toolkit.py  audio_aliyun_toolkit.py  audio_toolkit.py  bash_toolkit.py  document_toolkit.py  file_edit_toolkit.py  github_toolkit.py  gmail_toolkit.py  image_toolkit.py  memory_toolkit.py  python_executor_toolkit.py  search_toolkit.py  serper_toolkit.py  tabular_data_toolkit.py  user_interaction_toolkit.py  video_toolkit.py  wikipedia_toolkit.py
cogents/tools/: MIGRATION_SUMMARY.md  README.md  base.py  registry.py
docs/: conf.py  index.rst
examples/: askura_agent_demo.py  askura_agent_interactive.py  colorful_logging_example.py  deep_researcher_example.py  example_usage.py  goalith_decomposer_example.py  goalith_decomposer_simple_example.py  langsmith_example.py  litellm_demo.py  llamacpp_demo.py  ollama_demo.py  opik_tracing_example.py  orchestrix_toolify_demo.py  seekra_agent_demo.py  semantic_search_example.py  tarzi_fetcher_example.py  tarzi_search_example.py  token_tracking_demo.py  tools_demo.py  trip_extraction_example.py  unified_next_action_example.py  web_search_tools_example.py
examples/agents/: askura_agent_demo.py  enhanced_trip_extraction.py  models.py
examples/base/: colorful_logging_example.py  litellm_demo.py  opik_tracing_example.py  token_tracking_demo.py  watchdog_example.py
examples/common/: litellm_demo.py  llamacpp_demo.py  ollama_demo.py
examples/ingreds/: web_surfer_bing_search.py  web_surfer_demo.py  web_surfer_wikipedia_demo.py
examples/tools/: models.py  semantic_search_example.py  tools_demo.py  trip_extraction.py
scripts/: download_model.py
specs/: 1_overview_design.md  2_goalith_design.md  3_toolify_design.md  4_orchestrix_design.md  5_askura_agent_design.md
tests/: README.md  conftest.py
tests/base/: __init__.py  test_base_watchdog.py  test_litellm_integration.py  test_llamacpp_integration.py  test_llm_environment.py  test_ollama_integration.py  test_openai_integration.py  test_openrouter_integration.py  test_routing_base.py  test_routing_dynamic_complexity.py  test_routing_router.py  test_routing_self_assessment.py  test_routing_types.py
tests/common/: test_ollama_integration.py  test_token_usage_integration.py
tests/goalith/: __init__.py  test_integration.py
tests/ingreds/: __init__.py  test_google_ai_search.py  test_vectorstore_base.py  test_web_surfer.py
tests/integration/: test_google_ai_search.py  test_litellm_integration.py  test_llamacpp_integration.py  test_llm_environment.py  test_llm_integration.py  test_ollama_integration.py  test_openai_integration.py  test_openrouter_integration.py  test_tavily_search.py  test_token_usage_integration.py  test_vectorstore_base.py  test_vectorstore_pgvector.py  test_vectorstore_weaviate.py  test_weaviate_integration.py
tests/resources/: test_google_ai_search.py  test_tarzi_fetcher.py  test_tarzi_searcher.py  test_tavily_search.py  test_vectorstore_base.py
tests/toolify/: test_arxiv_toolkit.py  test_audio_aliyun_toolkit.py  test_base.py  test_bash_toolkit.py  test_config.py  test_document_toolkit.py  test_file_edit_toolkit.py  test_github_toolkit.py  test_gmail_toolkit.py  test_image_toolkit.py  test_memory_toolkit.py  test_python_executor_toolkit.py  test_registry.py  test_search_toolkit.py  test_serper_toolkit.py  test_tabular_data_toolkit.py
tests/tools/: test_arxiv_toolkit.py  test_base.py  test_bash_toolkit.py  test_config.py  test_document_toolkit.py  test_file_edit_toolkit.py  test_github_toolkit.py  test_image_toolkit.py  test_memory_toolkit.py  test_python_executor_toolkit.py  test_registry.py  test_search_toolkit.py  test_serper_toolkit.py  test_tabular_data_toolkit.py
tests/unit/: test_document_processor.py  test_routing_base.py  test_routing_dynamic_complexity.py  test_routing_router.py  test_routing_types.py
(+90 files in other folders)
