[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cogents"
version = "0.0.20"
description = "Towards a cognitive agentic framework"
readme = "README.md"
license = "MIT"
authors = ["Xiaming Chen <chenxm35@gmail.com>"]
maintainers = ["Xiaming Chen <chenxm35@gmail.com>"]
keywords = ["agents", "multi-agent system", "cognition", "artificial intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "cogents"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
python-dotenv = "^1.1.1"
cogents-core = "^0.1.2,<0.2.0"
httpx = "^0.28.1"
aiohttp = "^3.9.0"
anyio = "^4.10.0"
# Vector database
weaviate-client = "^4.9.0"
# Web search
tavily-python = "^0.3.0"
langchain-tavily = "^0.2.11"
# Voice processing
aliyun-python-sdk-core = "^2.13.1,<3.0.0"
# Web surfer
browser-use = "^0.7.1"
# Tools dependencies
matplotlib = "^3.8.0"
pexpect = "^4.9.0"
ipython = "^8.18.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.0"
arxiv = "^2.2.0"
opik = "^0.2.0"
pillow = "^10.0.0"
wikipedia-api = "^0.6.0"
pandas = "^2.0.0"
pymupdf = "^1.23.0"
openpyxl = "^3.1.5"
# Gmail toolkit dependencies
google-api-python-client = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
google-auth = "^2.0.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-cov = "^4.0.0"
pytest-asyncio = "^1.1.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^25.5.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"
pygraphviz = "^1.14"

[tool.poetry.urls]
Homepage = "https://github.com/caesar0301/cogents"
Documentation = "https://cogents.readthedocs.io/"
Repository = "https://github.com/caesar0301/cogents"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["cogents"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 
