[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cogents"
version = "0.0.20"
description = "Towards a cognitive agentic framework"
readme = "README.md"
license = "MIT"
authors = ["Xiaming Chen <chenxm35@gmail.com>"]
maintainers = ["Xiaming Chen <chenxm35@gmail.com>"]
keywords = ["agents", "multi-agent system", "cognition", "artificial intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "cogents"}]

[tool.poetry.dependencies]
python = "^3.12.6"
pydantic = "^2.0.0"
python-dotenv = "^1.1.1"
cogents-core = "^0.1.8,<0.2.0"
cogents-tools = "^0.1.2,<0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-cov = "^4.0.0"
pytest-asyncio = "^1.1.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^25.5.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"

[tool.poetry.urls]
Homepage = "https://github.com/caesar0301/cogents"
Repository = "https://github.com/caesar0301/cogents"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["cogents"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 
